--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/armicon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dofbot"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ModifyPassword"
+            android:name=".DataBaseTest"
             android:exported="false" />
         <activity
             android:name=".Authentication"
